--- a/src/common/common.css
+++ b/src/common/common.css
@@ -137,8 +137,8 @@ html, body {
   margin: 0 auto;
   overflow: hidden;
   width: 100%;
-  height: 2.2rem;
-  line-height: 2.2rem;
+  height: 2.25rem;
+  line-height: 2.25rem;
   background-color: #BE002E;
   color: #333;
   border-bottom: .05rem solid #BE002E;
@@ -148,8 +148,8 @@ html, body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   position: static;
-  height: 2.2rem;
-  padding: 0 2.2rem 0 2.2rem;
+  height: 2.25rem;
+  padding: 0 2.25rem 0 2.25rem;
   overflow: hidden;
     font-weight: normal;
 }
@@ -157,7 +157,7 @@ html, body {
 .page-body {
   position: absolute;
   background-color: #FFF;
-  top: 2.2rem;
+  top: 2.25rem;
   right: 0;
   bottom: 0;
   left: 0;
@@ -177,9 +177,9 @@ html, body {
   position: absolute;
   top: 0;
   left: 0;
-  height: 2.2rem;
-  line-height: 2.2rem;
-  width: 2.2rem;
+  height: 2.25rem;
+  line-height: 2.25rem;
+  width: 2.25rem;
   background: url("assets/leftback.png") no-repeat;
   background-size: 1.06rem 1.06rem;
   background-position: .57rem 0.57rem ;
@@ -204,9 +204,9 @@ html, body {
 
 .page header .title {
     position: absolute;
-    left: 2.2rem;
+    left: 2.25rem;
     top: 0;
-    right: 2.2rem;
+    right: 2.25rem;
     bottom: 0rem;
     font-size: 0.9rem;
     font-weight: normal;
@@ -226,12 +226,13 @@ html, body {
   position: absolute;
   top: 0;
   right: 0;
-  width: 2.5rem;
-  height: 2.2rem;
-  line-height: 2.2rem;
+  width: 3.75rem;
+  height: 2.25rem;
+  line-height: 2.25rem;
   font-size: .7rem;
   overflow: hidden;
   color: #FFF;
+  text-align:center;
 }
 
 .yellow-btn {
@@ -443,7 +444,7 @@ html, body {
 .ui-window-title-temp{
     position: absolute;
     width: 100%;
-    height: 2.2rem;
+    height: 2.25rem;
     left: 0%;
     top: 0;
     bottom: 0;
@@ -453,9 +454,9 @@ html, body {
 }
 .ui-window-title-back{
     opacity:1;
-    height: 2.2rem;
-    line-height: 2.2rem;
-    width: 2.2rem;
+    height: 2.25rem;
+    line-height: 2.25rem;
+    width: 2.25rem;
     background: url("assets/leftback.png") no-repeat;
     background-size: 1.06rem 1.06rem;
     background-position: .57rem 0.57rem ;
@@ -513,7 +514,7 @@ html, body {
 .guan{
     display: inline-block;
     position: relative;
-    width: 2.2rem;
+    width: 2.25rem;
     height: 1.1rem;
     line-height: 1.1rem;
     background: rgba(187,8,51,0.5);
